# misaki-chan

./: Cargo.toml  Readme.md
example/: config.toml
src/: bot.rs  config.rs  live.rs  main.rs  parser.rs  user.rs
