[package]
name = "misaki-chan"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.11.3", default-features = false, features = [
    "auto-send",
    "macros",
    "rustls",
    "ctrlc_handler",
] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.9"
serde_json = "1.0"
tokio = { version = "1.19.2", features = ["full"] }
anyhow = "1"
reqwest = { version = "0.11.11", default-features = false, features = [
    "rustls",
] }
regex = "1.7.0"
html-escape = "0.2.11"
chrono = "0.4"

once_cell = "1.12.0"
shlex = "1.1.0"
